--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   "dependencies": {
     "@types/smoothscroll-polyfill": "^0.3.0",
     "mitt": "^1.1.3",
+    "prettier": "^1.19.1",
+    "rollup-plugin-prettier": "^0.6.0",
     "rrweb-snapshot": "^0.7.20",
     "smoothscroll-polyfill": "^0.4.3"
   }
