--- a/packages/rrweb/package.json
+++ b/packages/rrweb/package.json
@@ -84,6 +84,7 @@
     "@rrweb/types": "^2.0.0-alpha.18",
     "@rrweb/utils": "^2.0.0-alpha.18",
     "@types/css-font-loading-module": "0.0.7",
+    "@medv/finder": "*",
     "@xstate/fsm": "^1.4.0",
     "base64-arraybuffer": "^1.0.1",
     "mitt": "^3.0.0",
