--- a/packages/rrweb-snapshot/package.json
+++ b/packages/rrweb-snapshot/package.json
@@ -53,6 +53,9 @@
     "url": "https://github.com/rrweb-io/rrweb/issues"
   },
   "homepage": "https://github.com/rrweb-io/rrweb/tree/master/packages/rrweb-snapshot#readme",
+  "dependencies": {
+    "@rrweb/types": "^2.0.0-alpha.14"
+  },
   "devDependencies": {
     "@rrweb/types": "^2.0.0-alpha.18",
     "@rrweb/utils": "^2.0.0-alpha.18",
